[package]
name = "revm-inspectors"
description = "Revm inspector implementations"
version = "0.32.0"
edition = "2021"
rust-version = "1.86.0"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/paradigmxyz/revm-inspectors"
repository = "https://github.com/paradigmxyz/revm-inspectors"
categories = ["cryptography"]
keywords = ["ethereum", "evm", "inspectors", "tracing", "debugging"]
exclude = [
    ".github",
    "scripts",
    "testdata",
    "tests",
    "cliff.toml",
    "deny.toml",
    "release.toml",
]

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = "deny"
rustdoc.all = "warn"
clippy.lint_groups_priority = "allow"

[dependencies]
# eth
alloy-rpc-types-eth = { version = "1.0.38", default-features = false }
alloy-rpc-types-trace = { version = "1.0.38", default-features = false }
alloy-sol-types = { version = "1.4", default-features = false }
alloy-primitives = { version = "1.4", default-features = false, features = [
    "map",
] }
# revm = { version = "31.0.0", default-features = false }
revm = { git = "https://github.com/mantle-xyz/revm", tag = "v2.2.1", default-features = false }

anstyle = { version = "1.0", optional = true }
colorchoice = "1.0"
thiserror = { version = "2.0", default-features = false }

# serde
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# js-tracer
boa_engine = { version = "0.21", optional = true }
boa_gc = { version = "0.21", optional = true }

[dev-dependencies]
snapbox = { version = "0.6", features = ["term-svg"] }

[features]
default = ["std"]
std = [
    "alloy-primitives/std",
    "anstyle/std",
    "serde/std",
    "serde_json/std",
    "revm/std",
    "thiserror/std",
]
serde = ["dep:serde", "revm/serde"]
js-tracer = ["dep:boa_engine", "dep:boa_gc"]

# [patch."https://github.com/mantle-xyz/revm"]
# revm = { path = "../revm/crates/revm" }
# revm-bytecode = { path = "../revm/crates/bytecode" }
# revm-state = { path = "../revm/crates/state" }
# revm-primitives = { path = "../revm/crates/primitives" }
# revm-interpreter = { path = "../revm/crates/interpreter" }
# revm-inspector = { path = "../revm/crates/inspector" }
# revm-context = { path = "../revm/crates/context" }
# revm-context-interface = { path = "../revm/crates/context/interface" }
# revm-database = { path = "../revm/crates/database" }
# revm-database-interface = { path = "../revm/crates/database/interface" }
